--- a/tmux.conf
+++ b/tmux.conf
@@ -1,3 +1,6 @@
 set-option -g prefix C-b
 set-option -g mouse on
 set-window-option -g mode-keys vi
+
+# this makes the pane index visible at the top of each pane
+set-option -g pane-border-status top
