--- a/starship.toml
+++ b/starship.toml
@@ -1,14 +1,27 @@
 # Symlink this file to ~/.config/starship.toml
 # ln -s absolute/path/of/this/file ~/.config/starship.toml
 
-format = "$character"
-right_format = "$all"
-add_newline = false
-command_timeout = 500
+# ========= config start ================
+# Get editor completions based on the config schema
+"$schema" = 'https://starship.rs/config-schema.json'
+
+format = "$all"
+# right_format = "$all" -> this is annoying when coppying commands
+add_newline = true
+command_timeout = 700
 
 [character]
 success_symbol = '[\$](bold green)'
 error_symbol = '[!](bold red)'
+disabled = false
+
+[localip]
+ssh_only = false
+format = '@[$localipv4](bold red) '
+disabled = false
+
+[line_break]
+disabled = true
 
 [fill]
 symbol = " "
@@ -19,6 +32,10 @@ disabled = true
 [directory]
 truncate_to_repo = false
 style = "white dimmed"
+
+[jobs]
+symbol = "+ "
+number_threshold = 1
 
 [git_branch]
 format = "[$symbol$branch]($style) "
@@ -36,11 +53,17 @@ format = "[$duration]($style) "
 [golang]
 disabled = true
 
+[python]
+disabled = false
+format = '[${symbol}${pyenv_prefix}(${version} )(\($virtualenv\) )]($style)'
+
 [status]
 disabled = false
 format = "[$status]($style) "
 
 [memory_usage]
 disabled = false
-threshold = -1
-format = "${ram_pct} "
+threshold = 80
+format = "[Mem$ram_pct Swp$swap_pct]($style) "
+style = "bold dimmed white"
+# ========= config end ================
